tests/sema/fail/auto_no_init.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  auto x;
  return 0;
}
